# ask-about-mahen-llm

./: .env  .gitignore  Makefile  README.md
.github/workflows/: deploy.yml
backend/: .bedrock_agentcore.yaml  Dockerfile  agentcore.ipynb  context.py  deploy.py  inspect_imports.py  pyproject.toml  requirements.txt  resources.py  server.py
backend/data/: facts.json  resume.docx  summary.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: twin.tsx
memory/: 195aa1d3-7bf6-4cfb-a5d0-0d0b12772725.json  36d782d5-7b2c-4810-b889-ed01aaa45555.json  6d5ee401-1747-4d9b-a2f5-f73dfaef10c4.json  b36428ad-2965-4a48-9d05-e4fd50e3faee.json
scripts/: deploy.sh  destroy.sh
terraform/: backend-setup.tf  main.tf  tf.vars  variables.tf  versions.tf
