[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.67",
    "fastapi>=0.121.0",
    "mangum>=0.19.0",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "strands-agents>=0.2.17",
    "strands-agents-tools>=0.2.17",
    "python-docx>=0.8.11",
]
